removed duplicate code HabitServiceTest class